# DevBasics

./: .gitignore  CMakeLists.txt  Curriculum_Advised_by_Chat_GPT.md  README.md  build_mac.sh  bulid_win.bat
DSNA/3_LinkedList_Expansion/: DoubleLinkedList.c  LinkedList_Add.md
DSNA/4_LinkedList_Polynomial/: Polynomial.md  polynomial.c
DSNA/5_Stack/: arrayStack.c  stack.c  stack.h  stack.md  stack_reverseString.c
DSNA/6_usingStack/: Stack.c  hStack  hStack.c  hStack.h  reverseString  reverseString.c  stack_checkBracketMatch.c  stack_reverseString.c
DSNA/7_Queue/: Deque.c  arrayQueue  arrayQueue.c  queue.c  queue.md
Data_Structure_and_Algorithms/: Data_structure_Algorithms.md
Data_Structure_and_Algorithms/1_ArrayList/: ArrayList.c  ArrayList.md
Data_Structure_and_Algorithms/2_LinkedList/: LinkedList  LinkedList.c  LinkedList.md
Data_Structure_and_Algorithms/3_LinkedList_Add/: CircularLinkedList  CircularLinkedList.c  DoubleLinkedList  DoubleLinkedList.c  LinkedList_Add.md
Data_Structure_and_Algorithms/3_LinkedList_Expansion/: DoubleLinkedList.c  LinkedList_Add.md
Data_Structure_and_Algorithms/4_LinkedList_Polynomial/: Polynomial.md  polynomial.c
Data_Structure_and_Algorithms/ArrayList/: ArrayList.c  ArrayList.md
include/: includeArrayGraph.h  includeBinTree.h  includeBitSet.h  includeChainHash.h  includeClosedHash.h  includeGenericStack.h  includeGenericStructure.h  includeHeap.h  includeIntSet.h  includeLinkedGraph.h  includeMember.h  includeNotationStack.h  includePostfix.h  includeSortedIntSet.h  includeSorting.h  includeStack.h  includeTextSearch.h
markdown/: CMake.md  Curriculum_Advised_by_Chat_GPT.md  Data Structure N Algorithms.md  VSCode_Setup.md
markdown/Algorithm/: Algorithm_Basics.md  Hashing.md  Sentinel_Method.md  Set.md  Sorting.md
markdown/C/: Pointer Arithmetics.md
markdown/DataStructure/: ArrayBinaryTree.md  ArrayList.md  BinarySearchTree.md  CompleteBinaryTree.md  FullBinaryTree.md  Graph.md  GraphSearch.md  Heap.md  LinkedLists_kr.md  MakeGraph.md  PriorityQueue.md  Search.md  SkewedBinaryTree.md  Tree.md  queue.md  stack.md
source/Algorithm/: mainBasics_2.c  mainBsearch_1.c  mainBsearch_2.c  mainFunctionPointers.c  mainSentinelMethod.c
source/C_language/: 12_FunArgByRef.c  (+4 more)
(+183 files in other folders)
